--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -3,7 +3,8 @@ FROM ${ARCH}python:slim
 
 WORKDIR /usr/src/app
 
-RUN pip install --no-cache-dir packaging requests codetiming boto3 flask pyyaml secure prometheus_client
+COPY requirements requirements
+RUN pip install --no-cache-dir -r requirements && rm requirements
 
 COPY src .
 COPY config /config
