--- a/charts/opserver/templates/opserver-secret.yaml
+++ b/charts/opserver/templates/opserver-secret.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: opserver-secret
-  namespace: quality-assurance
-type: Opaque
+  name: {{ template "opserver.fullname" . }}-secret
+  namespace: {{ .Release.Namespace }}
 stringData:
-  API_TOKEN: {{ .Values.apiToken | b64enc }}
+  API_TOKEN: {{ .Values.config.apiToken | b64enc }}
